--- a/Client/mainwindow.ui
+++ b/Client/mainwindow.ui
@@ -13,7 +13,7 @@
     <x>0</x>
     <y>0</y>
     <width>321</width>
-    <height>424</height>
+    <height>518</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -177,6 +177,37 @@
      <string/>
     </property>
    </widget>
+   <widget class="QGroupBox" name="groupBox_3">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>380</y>
+      <width>281</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string/>
+    </property>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>281</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Incorrect username or password</string>
+     </property>
+    </widget>
+   </widget>
    <zorder>groupBox</zorder>
    <zorder>groupBox_2</zorder>
    <zorder>pushButton</zorder>
@@ -187,6 +218,7 @@
    <zorder>label_3</zorder>
    <zorder>label_4</zorder>
    <zorder>pushButton_2</zorder>
+   <zorder>groupBox_3</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
